# claude-free-installer

./: .gitignore  CHANGELOG.md  README.md  claude-free-audit.py  install-claude-free-macos.sh  install-claude-free-windows.ps1  install-claude-free.sh  pyproject.toml
docs/: ARCHITECTURE.md  AUDIT.md  BENCHMARKS.md  COMMANDS.md  FAQ.md  INSTALL.md  TROUBLESHOOTING.md
src/claude_free/: __init__.py  __main__.py  benchmarks.py  cli.py  colors.py  env.py  measure.py  rate_limit.py
src/claude_free/commands/: __init__.py  audit.py  update.py
src/claude_free/providers/: __init__.py  base.py  nvidia_nim.py  openrouter.py
src/launcher/: posix.sh  windows.ps1
tests/: test_benchmarks.py  test_env.py  test_providers.py  test_rate_limit.py
tools/: build.py  build_installers.py
