[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-free"
version = "0.3.0"
description = "Audit, calibrate, and switch NVIDIA NIM models for Claude Code"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "ChenghengLi" }]
keywords = ["claude", "claude-code", "nvidia-nim", "llm", "benchmarks"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development",
]
dependencies = []  # zero runtime deps — stdlib only

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
]

[project.urls]
Homepage = "https://github.com/ChenghengLi/claude-free-installer"
Documentation = "https://github.com/ChenghengLi/claude-free-installer/tree/main/docs"
Changelog = "https://github.com/ChenghengLi/claude-free-installer/blob/main/CHANGELOG.md"
Issues = "https://github.com/ChenghengLi/claude-free-installer/issues"

[project.scripts]
claude-free-audit = "claude_free.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_free"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tools/",
    "tests/",
    "docs/",
    "README.md",
    "CHANGELOG.md",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
pythonpath = ["src"]
